--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "author": "Mauro Alvarez (@morklash)",
   "license": "Copyright",
   "dependencies": {
+    "material-ui": "1.0.0-beta.36",
+    "material-ui-icons": "1.0.0-beta.36",
     "npm": "5.7.1",
     "object-assign": "4.1.0",
     "react": "16.2.0",
