--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-router-dom": "4.2.2",
     "react-router-redux": "5.0.0-alpha.6",
     "redux": "3.6.0",
-    "redux-thunk": "2.1.0"
+    "redux-thunk": "2.1.0",
+    "sass.js": "0.10.9"
   },
   "devDependencies": {
     "autoprefixer": "7.1.4",
@@ -60,11 +61,13 @@
     "chalk": "2.0.1",
     "concurrently": "3.5.0",
     "connect-history-api-fallback": "1.3.0",
+    "copy-webpack-plugin": "4.5.1",
     "coveralls": "2.13.1",
     "css-loader": "0.28.7",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "eslint": "4.2.0",
+    "eslint-plugin-compat": "2.2.0",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-react": "7.3.0",
     "eslint-watch": "3.1.2",
