--- a/package.json
+++ b/package.json
@@ -41,7 +41,16 @@
     "react-router-redux": "5.0.0-alpha.6",
     "redux": "3.6.0",
     "redux-thunk": "2.1.0",
-    "sass.js": "0.10.9"
+    "sass.js": "0.10.9",
+
+    "chartist": "^0.10.1",
+    "classnames": "^2.2.5",
+    "npm-run-all": "^4.1.1",
+    "perfect-scrollbar": "^1.3.0",
+    "react-chartist": "^0.13.1",
+    "react-google-maps": "^9.4.5",
+    "react-scripts": "1.0.17",
+    "react-swipeable-views": "^0.12.12"
   },
   "devDependencies": {
     "autoprefixer": "7.1.4",
